--- a/app/src/main/res/drawable/layout_bg.xml
+++ b/app/src/main/res/drawable/layout_bg.xml
@@ -1,11 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp" />
-    <padding
-        android:bottom="0dp"
-        android:left="0dp"
-        android:right="0dp"
-        android:top="0dp" />
+<shape  xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <solid android:color="@color/purple_500"/>
+    <corners android:bottomRightRadius="30dp"
+        android:bottomLeftRadius="30dp"
+        android:topRightRadius="0dp"
+        android:topLeftRadius="0dp"/>
 </shape>
