--- a/app/src/main/res/layout/game_item.xml
+++ b/app/src/main/res/layout/game_item.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_170sdp"
+    android:layout_marginBottom="@dimen/_15sdp"
+    android:layout_marginHorizontal="@dimen/_15sdp"
     app:cardCornerRadius="15dp"
     app:cardElevation="5dp">
 
@@ -13,10 +15,12 @@
         android:weightSum="1">
 
         <ImageView
+            android:id="@+id/img_game_item"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.7"
             android:contentDescription="Game Image"
+            android:scaleType="centerCrop"
             android:src="@drawable/landing" />
 
         <LinearLayout
